# ethercat-soem

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix
ethercat-soem-ctx/: Cargo.toml
ethercat-soem-ctx/src/: error.rs  group.rs  lib.rs  od_list.rs  oe_list.rs  slave.rs  sm.rs
ethercat-soem-sys/: Cargo.toml  README.md  build.rs  issue-224.patch  wrapper.h
examples/: read_od_list.rs  read_sdo.rs  simple.rs
src/: al_status.rs  context.rs  error.rs  lib.rs  slave.rs  util.rs
