[package]
name = "ethercat-soem"
version = "0.0.0"
description = "Binding to the SOEM open-source EtherCAT master"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
license = "GPL-2.0-only"
edition = "2018"

[dependencies]
ethercat-types = "0.3.1"
log = "0.4"
num-traits = "0.2"
thiserror = "1"

[dependencies.ethercat-soem-sys]
version = "0.1"
path = "ethercat-soem-sys"

[dev-dependencies]
anyhow = "1"
env_logger = "0.8"

[features]
# See https://github.com/OpenEtherCATsociety/SOEM/issues/224#issuecomment-525872643
issue-224-workaround = ["ethercat-soem-sys/issue-224-workaround"]
