[package]
name = "ethercat-soem"
version = "0.1.0"
description = "Binding to the SOEM open-source EtherCAT master"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
license = "GPL-2.0-only"
edition = "2018"

[dependencies]
ethercat-types = "0.3.5"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"

[patch.crates-io]
ethercat-types = { git = "https://github.com/ethercat-rs/ethercat-types", branch = "simplify" }

[dependencies.ethercat-soem-ctx]
version = "0.1.1"
path = "ethercat-soem-ctx"

[dev-dependencies]
anyhow = "1"
env_logger = "0.8"

[features]
# See https://github.com/OpenEtherCATsociety/SOEM/issues/224#issuecomment-525872643
issue-224-workaround = ["ethercat-soem-ctx/issue-224-workaround"]

[badges]
maintenance = { status = "actively-developed" }
