[package]
name = "ethercat-soem"
version = "0.2.0"
description = "Binding to the SOEM open-source EtherCAT master"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
license = "GPL-2.0-only"
edition = "2021"

[dependencies]
ethercat-types = "0.3.5"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"

[dependencies.ethercat-soem-ctx]
version = "0.2"
path = "ethercat-soem-ctx"

[dev-dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"

[features]
# See https://github.com/OpenEtherCATsociety/SOEM/issues/224#issuecomment-525872643
issue-224-workaround = ["ethercat-soem-ctx/issue-224-workaround"]

[badges]
maintenance = { status = "actively-developed" }
