[package]
name = "ethercat-soem-sys"
version = "0.0.0"
description = "Binding to the SOEM open-source EtherCAT master"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
license = "GPL-2.0-only"
edition = "2018"

[build-dependencies]
bindgen = "0.55"
cmake = "0.1"

[badges]
maintenance = { status = "actively-developed" }
