[package]
name = "ethercat-soem-sys"
version = "0.2.0"
description = "Binding to the SOEM open-source EtherCAT master"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
readme = "README.md"
license = "GPL-2.0-only"
edition = "2021"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"

[features]
# See https://github.com/OpenEtherCATsociety/SOEM/issues/224#issuecomment-525872643
issue-224-workaround = []

[badges]
maintenance = { status = "actively-developed" }
